Auto-refresh cookie fix and row spacing

--- a/app/front/css/bfo-oddstable-sass.scss
+++ b/app/front/css/bfo-oddstable-sass.scss
@@ -83,6 +83,8 @@
       font-size: 10px;
       font-weight: 500;
       max-width: 110px;
+      line-height: 10px;
+      padding-right: 2px;
       word-break: break-word;
       span.tw {
         width: 100%;
